--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
  <div class="greetingBox">
-   <a class="getthatlineouttahere" href="http://www.witty.portfoliobox.net/dashboard">
+   <a class="getthatlineouttahere" href="http://witty.portfoliobox.net/dashboard">
   <p  id="greetingHop">oh, hello</p>
  </a>
 </div>
