--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel = "stylesheet"
    type = "text/css"
    href = "welcome_style.css" />
-<title>greeting hopper</title>
+<title>Hello. Salut. Hola. Ciao. Hoi. Hallo.</title>
 </head>
 <body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> 
